# web-assembly-remote

./: .gitignore  Cargo.toml  build.ps1  build.sh  config.toml.example  readme.md
.github/workflows/: build.yml
client/: Cargo.toml
client/src/: lib.rs
client/web/: index.html  style.css
client/web/js/: audio.js  decoder.js  input.js  main.js  pcm-worklet.js  renderer.js
protocol/: Cargo.toml
protocol/src/: lib.rs
server/: Cargo.toml
server/src/: audio.rs  auth.rs  capture.rs  config.rs  cursor.rs  encoder.rs  input.rs  main.rs  server.rs
server/static_auth/: login.html  login_failed.html
