[package]
name = "wasm-remote-client"
version = "0.1.0"
edition = "2021"
description = "WebAssembly remote desktop client – protocol & latency helpers"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
protocol = { path = "../protocol" }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
] }
