[package]
name = "wasm-remote-server"
version = "0.1.0"
edition = "2021"
description = "Low-latency remote desktop server with AMD AMF encoding"

[dependencies]
protocol = { path = "../protocol" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs"] }
futures-util = "0.3"
scrap = "0.5"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser", "windef", "libloaderapi", "errhandlingapi",
    "processthreadsapi", "impl-default"
] }
